# 3Dcurveshierarchy

./: CMakeLists.txt  Task.md  main.cpp
curves/: curve.h
curves/circle/: circle.cpp  circle.h
curves/curves_container/: curves_container.cpp  curves_container.h  curves_random_generator.cpp  populateSpecificCurveType.cpp  printCoordinatesAndDerivatives.cpp  sort_container.cpp  total_sum_of_radii.cpp
curves/ellipse/: ellipse.cpp  ellipse.h
curves/helix/: helix.cpp  helix.h
tests/test_curve_lib/: test_curve_lib.cpp  test_curve_lib.h
visualizer/: curvewidget.cpp  curvewidget.h
